--- a/backend/sff/src/main/resources/application-local.properties
+++ b/backend/sff/src/main/resources/application-local.properties
@@ -8,7 +8,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ssfdb
 spring.datasource.username=ssfuser
 spring.datasource.password=password
 
-spring.security.oauth2.client.registration.google.client-id =  # get a client-id from https://console.developers.google.com/
-spring.security.oauth2.client.registration.google.client-secret: # get a client-secret from https://console.developers.google.com/
-
+spring.security.oauth2.client.registration.google.client-id=187658810676-f3tsje08gj969ihfn54dlcqob5fljfc5.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=1vpHJTNkyhx1XfAL0kHE18_3
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+security.oauth2.client.accessTokenUri  =  https://www.googleapis.com/oauth2/v3/token
+security.oauth2.client.userAuthorizationUri  =  https://accounts.google.com/o/oauth2/auth
+security.oauth2.client.tokenName = oauth_token
+security.oauth2.client.authenticationScheme = query
+security.oauth2.client.clientAuthenticationScheme = form
+security.oauth2.client.scope = profile email
+security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
+security.oauth2.resource.preferTokenInfo = false
 jwt.secret=ssfjwtsecret
