--- a/backend/sff/src/main/resources/application-local.properties
+++ b/backend/sff/src/main/resources/application-local.properties
@@ -7,10 +7,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ssfdb
 spring.datasource.username=ssfuser
 spring.datasource.password=password
+spring.datasource.jpa.hibernate.update=ddl-auto
+spring.datasource.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.security.oauth2.client.registration.google.client-id=187658810676-f3tsje08gj969ihfn54dlcqob5fljfc5.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=1vpHJTNkyhx1XfAL0kHE18_3
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
 security.oauth2.client.accessTokenUri  =  https://www.googleapis.com/oauth2/v3/token
 security.oauth2.client.userAuthorizationUri  =  https://accounts.google.com/o/oauth2/auth
 security.oauth2.client.tokenName = oauth_token
@@ -20,3 +23,7 @@ security.oauth2.client.scope = profile email
 security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
 security.oauth2.resource.preferTokenInfo = false
 jwt.secret=ssfjwtsecret
+
+app.auth.tokenSecret=926D96C90030DD58429D2751AC1BDBBC
+app.auth.tokenExpirationMsec=864000000
+app.auth.oauth2.authorizedRedirectUris=http://localhost:3000/oauth2/redirect
