--- a/backend/sff/src/main/resources/application-local.properties
+++ b/backend/sff/src/main/resources/application-local.properties
@@ -10,6 +10,7 @@ spring.datasource.password=password
 spring.datasource.jpa.hibernate.update=ddl-auto
 spring.datasource.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.initialization-mode=always
 
 spring.security.oauth2.client.registration.google.client-id=187658810676-f3tsje08gj969ihfn54dlcqob5fljfc5.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=1vpHJTNkyhx1XfAL0kHE18_3
